--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,6 +23,6 @@
       </p>
     <![endif]-->
     <div class="container">{% block content %} {% endblock content %}</div>
-    <script src="{% static 'js/base.js' %}></script>
+    <script src="{% static 'js/base.js' %}"></script>
   </body>
 </html>
